---------------------------------------------------------------------------------------------------
Version: 3.0.4
Date: ??????
  Features:
    - Added picker cheat recipes (From Blueprint Extensions by Dewin).
    - Filter Fill now works on the player inventory.
    - Train Goto next station hotkey added.
    - Player inventory can be manually sorted.
    - Honking can attract enemies (defaults to off).
    - Train horns are configurable.
  Enhancements:
    - Selection tools, Blueprints, Blueprint Books, and Deconstruction items are hidden by default.
    - Changed the way notes are saved. Existing notes will get destroyed or lost.
    - Sort Inventory now uses sort_and_merge inventory method.
  Bugfixes:
    - Fix small logic bug in lib.
    - Allow specifying train horn.
    - Include changelog in release. #68
    - Reverse rotating saved dollies is now possible. Factorio Bug.
    - Fix belt reverser cloning wrong lines. #77
    - Fix miners getting incorrectly marked as finished. #76
    - Fix hand crafter crafting when holding items. #75
    - Fix mirror blueprint not mirroing splitters. #74
    - Fix map ping item description.
    - Fix filter fill nil error if mods change to custom gui. #72
    - Fix zapper being all undecidy in god mode. #70
    - Fix aggresive search in autodeconstruct.
    - Fix aggressive sort_and_merge.
---------------------------------------------------------------------------------------------------
Version: 3.0.3
Date: ??????
  Changes:
    - Better GUI support in some spots.
    - Per User setting added for simple quick entity blueprinting.
  Bugfixes:
    - Fix another notes gui error. #66
    - Fix Area tostring error in stdlib. Rotype
---------------------------------------------------------------------------------------------------
Version: 3.0.2
Date: ??????
  Bugfixes:
    - Fix rotating for real this time. (reverse saved rotate disabled due to factorio bug in .16.3)
    - Fix sticky-sign/note error.