@@ -1,0 +1,20 @@
+[blueprint-updater]
+error_cannot_set_stack=Unable to set the cursor item to 1x __ITEM__blueprint__.
+
+[controls]
+picker-mirror-blueprint=Mirror blueprint
+picker-bp-update=Update Blueprint
+picker-bp-snap-center=Center Blueprint
+picker-bp-snap-n=Snap to North Edge
+picker-bp-snap-e=Snap to East Edge
+picker-bp-snap-s=Snap to South Edge
+picker-bp-snap-w=Snap to West Edge
+picker-bp-snap-nw=Snap to NW Corner
+picker-bp-snap-ne=Snap to NE Corner
+picker-bp-snap-sw=Snap to SW Corner
+picker-bp-snap-se=Snap to SE Corner
+picker-add-empty-bp-to-book=Add an empty blueprint to this book
+picker-clean-empty-bps-in-book=Remove empty blueprints from book
+
+[item-name]
+picker-bp-updater=Blueprint Updater
